k8s/category-service/category-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    # Specify the Ingress class as AWS ALB
    kubernetes.io/ingress.class: alb
    # Create an internet-facing ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Specify the ALB protocol and port
    alb.ingress.kubernetes.io/target-type: ip
    # Optional: Redirect HTTP to HTTPS
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}'
    # Optional: Add tags to the ALB
    # Optional: Health check configuration
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  rules:
  - host: ctg-todoapp.com # Replace with your domain
    http:
      paths:
      - path: /api/categories
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 4000
